[package]
name = "rustbuster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
reqwest = { version = "*", features = ["json"] } # reqwest with JSON parsing support
futures = "*" # for our async / await blocks
tokio = { version = "*", features = ["full"] } # for our async runtime